assets/screen.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html{line-height:1}body{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Begin site styles below */

html {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 1em; /* 16/16 = 1*/
  line-height: 1.125em;  /* 18/16 = 1.125*/
  background-color: #D3D3D3;
}


header {
  font-size: 2em; /* 32/16 = 2*/
  line-height: 2.25em; /* 36/16 = 2.25*/
  background-color: #2a2727;
  color: #DCDCDC;
  display: flex;
  justify-content: center;
}

.h-card {
  font-size: 1em; /* 16/16 = 1*/
  line-height: 1.125em; /* 18/16 = 1*/
  padding-bottom: 1em; /* 16/16 = 1*/
  color: #DCDCDC;
  text-decoration: none;
  display: flex;
  flex-flow: column;
  justify-content: center;
}

#work,
#education {
  font-size: 2em; /* 32/16 = 2*/
  line-height: 1em; /* 16/16 = 1*/
  font-weight: bold;
  padding-top: .25em; /* 4/16 = 0.25*/
  background-color: #393433;
  color: #DCDCDC;
}

.workplace,
.community-college,
.university  {
  font-size: .75em; /* 12/16 = .75*/
  line-height: 1em; /* 16/16 = 1 (redundant but maybe useful for future?)*/
  padding-top: .25em; /* 4/16 = 0.25*/
  font-weight: normal;
}

.workdescription,
.associates-degree,
.bachelors-degree {
  font-size: .625em; /* 10/16 = .625*/
  line-height: 1em; /* 16/16 = 1*/
  font-weight: normal;
  padding-top: .25em; /* 4/16 = 0.25*/
}

.yearsexperience,
.college-time,
.university-time {
  font-size: .5em; /* 8/16 = .5*/
  line-height: 1em; /* 16/16 = 1*/
  font-weight: normal;
  padding-top: .25em; /* 4/16 = 0.25*/
}

#navigation ul {
  font-size: 1.25em; /* 20/16 = 1.25*/
  line-height: 1.25em; /* 20/16 = 1.25*/
  padding-top: 1em; /* 16/16 = 1 */
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: .75em; /* 12/16 = 0.75*/
  background-color: #D3D3D3;
  color: #DCDCDC;
}

a {
  text-decoration: none;
}

#about-me {
  font-size: 2em; /* 32/16 = 2*/
  line-height: 1.5em; /* 24/16 = 1.5*/
  background-color: #2a2727;
  color: #DCDCDC;
}

#about-me-body {
  font-size: .75em; /* 12/16 = .75*/
  line-height: 1em; /* 16/16 = 1.25*/
  background-color: #393433;
  color: #DCDCDC;
}

footer {
  padding-top: 2em; /*32/16 = 2*/
  font-size: .75em; /*12/16 = .75*/
}

img {
  display: block;
  max-width: 30%;
}

figcaption {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
@media screen and (min-width: 30em) {    /* 480/16 = 30*/
  img {
    max-width: 50%;
    margin: 0 auto;
    max-height: 50%;
  }
}

@media screen and (min-width: 48em) {  /* 768/16 = 48*/
  img {
    max-width: 50%;
    margin: 0 auto;
    max-height: 50%;
  }
}

